# signal_logger

./: README.md  Readme.md  jenkins-pipeline
rqt_signal_logger/: CMakeLists.txt  package.xml  plugin.xml  setup.py
rqt_signal_logger/docs/: page_rqt_gui.md
rqt_signal_logger/params/: anymal.yaml
rqt_signal_logger/resource/: SignalLoggerConfigure.ui  SignalLoggerVariables.ui  signal_logger_configure.ui  signal_logger_plugin.ui  signal_logger_variables.ui
rqt_signal_logger/scripts/: rqt_signal_logger
rqt_signal_logger/src/: LED.cpp  (+2 more)
signal_logger/: CMakeLists.txt  package.xml
signal_logger/docs/: mainpage.md  page_extend_silo.md  use_silo.md
signal_logger/include/signal_logger/: Buffer.hpp  BufferInterface.hpp  EventLogger.hpp  LogElement.hpp  LogElementBase.hpp  LogElementInterface.hpp  LogElementTypes.hpp  Logger.hpp  LoggerBase.hpp  LoggerNone.hpp  SLSingleton.hpp  SignalLoggerBase.hpp  SignalLoggerInterface.hpp  SignalLoggerNone.hpp  logger.hpp  macro_definitions.hpp  signal_logger.hpp  signal_logger_none.hpp  signal_logger_traits.hpp  typedefs.hpp
signal_logger/include/signal_logger/matlab/examples/: readDataFromSimulationAndControl.m
signal_logger/src/: EventLogger.cpp  LoggerBase.cpp  LoggerNone.cpp  SignalLoggerBase.cpp  logger.cpp  signal_logger.cpp
signal_logger/src/matlab/utils/: getContactFlagsFromData.m  getDataInTimeRange.m  getIdxOfModeSwitch.m  getQDesFromData.m  getScaledMode.m  plotVLines.m
signal_logger/test/: test_signal_logger.cpp  test_signal_logger_buffer_size.cpp
signal_logger_core/: CMakeLists.txt  package.xml
signal_logger_core/cmake/: ConfigExtras.cmake  signal_logger_core-extras.cmake
signal_logger_core/docs/: log_script.md  page_buffer.md  time.md
signal_logger_core/include/signal_logger_core/: Buffer.hpp  BufferInterface.hpp  LogElementBase.hpp  LogElementInterface.hpp  LogElementOptions.hpp  LogElementTypes.hpp  SignalLoggerBase.hpp  SignalLoggerNone.hpp  SignalLoggerOptions.hpp  signal_logger_traits.hpp  typedefs.hpp  yaml_helper.hpp
signal_logger_core/src/: SignalLoggerBase.cpp  SignalLoggerOptions.cpp
signal_logger_doc/: CMakeLists.txt  doxygen.config.in  mainpage.dox  package.xml  page_buffer.dox  page_extend_silo.dox  page_log_file.dox  page_log_script.dox  page_rqt_gui.dox  page_time.dox  page_use_silo.dox
signal_logger_example/: CMakeLists.txt  package.xml
signal_logger_example/include/signal_logger_example/: SignalLoggerExample.hpp
signal_logger_example/matlab/: example_plotter.m
signal_logger_example/src/: SignalLoggerExample.cpp  signal_logger_example_node.cpp
signal_logger_msgs/: CMakeLists.txt  package.xml
signal_logger_msgs/msg/: BoolMultiArray.msg  BoolStamped.msg  CharStamped.msg  EigenMatrixDouble.msg  EigenMatrixFloat.msg  Float32Stamped.msg  Float64Stamped.msg  Int16Stamped.msg  Int32Stamped.msg  Int64Stamped.msg  Int8MultiArray.msg  Int8Stamped.msg  LogElement.msg  MapIntDoubleStamped.msg  MapStringDoubleStamped.msg  MapStringIntStamped.msg  PairIntDoubleStamped.msg  PairStringDoubleStamped.msg  PairStringIntStamped.msg  StringStamped.msg  TimeStamped.msg  UInt16Stamped.msg  UInt32Stamped.msg  UInt64Stamped.msg  UInt8Stamped.msg  UnsignedCharStamped.msg
signal_logger_msgs/msg_ros2/: TimeStamped.msg
signal_logger_msgs/srv/: GetLoggerElement.srv  GetLoggerElementNames.srv  GetLoggerInfo.srv  LoadLoggerScript.srv  SaveLoggerData.srv  SetLoggerElement.srv
signal_logger_python/: CMakeLists.txt  README.md  package.xml  setup.py
signal_logger_python/src/signal_logger/: __init__.py  cartesian_signal.py  config.py  find.py  read.py  rotation_signals.py  signal.py  silo.py
signal_logger_python/test/: test_signal_logger_python.py
signal_logger_ros/: CMakeLists.txt  Readme.md  package.xml
signal_logger_ros/include/signal_logger_ros/: LogElement.hpp  LogElementBase.hpp  LogElementRos.hpp  Logger.hpp  LoggerRos.hpp  SignalLoggerRos.hpp  SignalLoggerRos1.hpp  SignalLoggerRos2.hpp  macro_definitions.hpp  signal_logger_ros.hpp  signal_logger_ros_traits.hpp  signal_logger_ros_traits_ros2.hpp
signal_logger_ros/src/: LogElementBase.cpp  LoggerRos.cpp  SignalLoggerRos.cpp  SignalLoggerRos1.cpp  SignalLoggerRos2.cpp
signal_logger_ros/test/: ros.test  test_main.cpp  test_signal_logger_ros.cpp  test_signal_logger_ros_buffer_size.cpp
signal_logger_sl/: CMakeLists.txt  package.xml
signal_logger_sl/include/: LoggerSl.hpp
signal_logger_sl/include/signal_logger_sl/: LoggerSl.hpp
signal_logger_sl/src/: LoggerSl.cpp
signal_logger_std/: CMakeLists.txt  package.xml
signal_logger_std/docs/: page_log_file.md
signal_logger_std/include/signal_logger_std/: LogElementStd.hpp  Logger.hpp  LoggerStd.hpp  SignalLoggerStd.hpp  macro_definitions.hpp  signal_logger_std.hpp  signal_logger_std_traits.hpp
signal_logger_std/matlab/: genIndexVariables.m  getFilenameFromNumber.m  loadLogFile.m  matchTimeToData.m  plot3dDataWithName.m  plotComXYMotionPlan.m  plotDataWithName.m  plotttingScript.m  processData.m
signal_logger_std/matlab/example/: main.m  testData
signal_logger_std/matlab/examples/: readAnymal.m  readDataFromAnymalLowLevelController.m  readDataFromSL.m  readDataFromSL.m~
signal_logger_std/matlab/gait_scripts/: plotMainTorso.m  plotStrideDuration.m  plot_data.m
signal_logger_std/matlab/gait_scripts/helpers/: plotBranchForce.m  plotBranchNodeJointData.m  plotForceData.m  plotJointDataType.m
signal_logger_std/matlab/plotting_helpers/: plotMainTorso.m
signal_logger_std/matlab/utils/: genIndexVariables.m  getDataFromFile.m  getFilenameFromNumber.m  getQFromData.m
signal_logger_std/src/: LoggerStd.cpp  SignalLoggerStd.cpp
signal_logger_ui/: CMakeLists.txt  README.md  package.xml  setup.py
signal_logger_ui/src/signal_logger_ui/: __init__.py  config.py  console_widget.py  signal_log_ui.py  signal_logger_plotcanvas.py  signal_logger_tab.py  signal_logger_tab_widget.py  signal_logger_types.py  signal_logger_ui.py
signal_logger_ui/src/signal_logger_ui/ui/: __init__.py  signal_logger_main_ui.py  signal_logger_tab_ui.py
signal_logger_ui/test/: plot_deriv.py  test_signal_logger_ui.py
(+7 files in other folders)
