<?xml version="1.0"?>
<package format="2">
  <name>signal_logger</name>
  <version>0.0.0</version>
  <description>The signal_logger package</description>

  <url type="website">https://bitbucket.org/ethz-asl-lr/signal_logger</url>
  <maintainer email="gehrinch@ethz.ch">Christian Gehring</maintainer>
  <maintainer email="bellicoso@mavt.ethz.ch">Dario Bellicoso</maintainer>
  <author email="gabriel.hottiger@mavt.ethz.ch">Gabriel Hottiger</author>
  <author email="gehrinch@ethz.ch">Christian Gehring</author>
  <author email="bellicoso@mavt.ethz.ch">Dario Bellicoso</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_logger</depend>
  <depend>kindr</depend>
  <build_export_depend>eigen</build_export_depend>

</package>
