<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>signal_logger</name>
  <version>0.5.23</version>
  <description>The signal_logger package</description>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <author email="cgehring@anybotics.com">Christian Gehring</author>
  <author email="bellicoso@mavt.ethz.ch">Dario Bellicoso</author>
  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <license>BSD</license>
  <url>https://github.com/anybotics/signal_logger</url>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend>signal_logger_core</depend>
  <depend>signal_logger_ros</depend>
  <depend>signal_logger_std</depend>
<!--   <test_depend condition="$ROS_VERSION == 1">cmake_code_coverage</test_depend> -->
  <test_depend condition="$ROS_VERSION == 1">gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
