<?xml version="1.0"?>
<package format="2">
  <name>signal_logger_doc</name>
  <version>0.5.0</version>
  <description>The signal logger documentation package</description>
  <maintainer email="cgehring@anybotics.com">Christian Gehring</maintainer>
  <license>BSD</license>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <url>https://github.com/anybotics/signal_logger</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>signal_logger</depend>
  <depend>signal_logger_ros</depend>
  <depend>signal_logger_std</depend>
  <depend>signal_logger_msgs</depend>
  <depend>rqt_signal_logger</depend>
  <build_depend>doxygen</build_depend>

</package>
