<?xml version="1.0"?>
<package format="2">
  <name>signal_logger_doc</name>
  <version>0.5.11</version>
  <description>The signal logger documentation package</description>
  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <license>BSD</license>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <url>https://github.com/anybotics/signal_logger</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>signal_logger</depend>
  <depend>signal_logger_ros</depend>
  <depend>signal_logger_std</depend>
  <depend>signal_logger_msgs</depend>
  <depend>rqt_signal_logger</depend>
  <build_depend>doxygen</build_depend>

</package>
