<?xml version="1.0"?>
<package format="2">
  <name>signal_logger_example</name>
  <version>0.5.8</version>
  <description>The signal_logger_example package</description>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <license>BSD</license>
  <url>https://github.com/anybotics/signal_logger</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>any_node</depend>
  <depend>signal_logger</depend>

</package>
