<?xml version="1.0"?>
<package format="2">
  <name>signal_logger_msgs</name>
  <version>0.0.0</version>
  <description>ROS message definitions for the signal logger.</description>
  <maintainer email="bellicoso@mavt.ethz.ch">Dario Bellicoso</maintainer>
  <author email="bellicoso@mavt.ethz.ch">Dario Bellicoso</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>catkin_simple</depend>
  <depend>message_generation</depend> 
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
</package>
