<?xml version='1.0' encoding='utf-8'?>
<package format="3">

  <name>signal_logger_msgs</name>
  <version>0.5.21</version>
  <description>ROS message definitions for the signal logger.</description>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>
  <author email="bellicoso@mavt.ethz.ch">Dario Bellicoso</author>
  <maintainer email="ghottiger@anybotics.com">Gabriel Hottiger</maintainer>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <license>BSD</license>
  <url>https://github.com/anybotics/signal_logger</url>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend condition="$ROS_VERSION == 1">message_runtime</depend>
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
