<?xml version="1.0"?>
<package format="2">
  <name>signal_logger_python</name>
  <version>0.1.21</version>
  <description>Python plotting interface for Signal Logger</description>
  <maintainer email="desteban@anybotics.com">Domingo Esteban</maintainer>
  <maintainer email="avijayan@anybotics.com">Aravind Vijayan</maintainer>
  <author email="scaron@anybotics.com">Stéphane Caron</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>signal_logger</exec_depend>
  <exec_depend>ipython3</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->
</package>
